# Doceebot

./: .env.example  .gitignore  AGENTS.md  IMPLEMENTATION_STATUS.md  PRODUCT_PLAN.md  README.md  alembic.ini  docker-compose.yml  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 20260630_0001_initial_schema.py  20260701_0002_work_log_details.py  20260702_0003_managed_documents.py  20260706_0004_conversation_audit.py  20260706_0005_developer_escalations.py  20260707_0006_session_search.py  20260707_0007_user_email_for_dashboard_admins.py  20260710_0008_meta_inbound_event_claims.py  20260714_0009_reminder_state.py
dashboard/: .env.example  .gitignore  README.md  index.html  package-lock.json  package.json  wrangler.jsonc
dashboard/src/: App.tsx  api.ts  firebase.ts  index.css  types.ts  worker-configuration.d.ts  worker.ts
deploy/: Caddyfile  doceebot-reminder.service  doceebot.service
docs/: DIGITALOCEAN_CADDY_DEPLOYMENT.md  DIGITALOCEAN_POSTGRES_ALEMBIC.md  META_WHATSAPP_CLOUD_API_RUNBOOK.md  TELEGRAM_CLOUDFLARE_SETUP.md  TUNNELS.md
docs/plans/: 2026-07-10-meta-cloud-api-adapter.md
scripts/: cloudflare_quick_tunnel.sh  delete_telegram_webhook.py  deploy_update_restart.sh  dev_init_env.py  export_conversation_audit.py  manual_complex_document_pipeline_check.py  manual_xlsx_pipeline_check.py  preview_telegram_wa_unify.py  preview_unify_three.py  probe_meta_status.py  set_telegram_webhook.py  sync_three_to_whatsapp.py
src/whatsapp_ai_agent/: __init__.py  config.py  main.py
tests/unit/: test_chat_processing.py  test_cloudflare_client.py  (+27 more)
(+96 files in other folders)
