[project]
name = "whatsapp-ai-agent"
version = "0.1.0"
description = "Multichannel WhatsApp and Telegram work logging assistant"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.18.5",
    "celery>=5.6.3",
    "fastapi>=0.138.1",
    "google-genai>=2.10.0",
    "httpx>=0.28.1",
    "openpyxl>=3.1.5",
    "psycopg[binary]>=3.3.4",
    "pydantic-settings>=2.14.2",
    "python-docx>=1.2.0",
    "python-multipart>=0.0.32",
    "python-telegram-bot>=22.8",
    "redis>=8.0.1",
    "sqlalchemy>=2.0.51",
    "twilio>=9.10.9",
    "uvicorn[standard]>=0.49.0",
]

[project.optional-dependencies]
agents = [
    "opencode-ai>=0.1.0a36",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "ruff>=0.15.20",
]

[project.scripts]
whatsapp-ai-agent = "whatsapp_ai_agent.main:run"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["B008"]
